--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-Flask==3.0.0
-Authlib==1.3.0
-pycups==2.0.1
-python-dotenv==1.0.0
-gunicorn==21.2.0
+flask>=3.0
+authlib>=1.3
+requests
+pycups
+python-dotenv
+gunicorn
+flask-cors
+imapclient
+pyyaml
+python-magic
+werkzeug>=3.0
